# checkerboard

./: Makefile  Makefile.am  Makefile.in  README.md  checkerboard.c  config.h  config.h.in  config.status  configure  configure.ac  makefile  snapcraft.yaml
autom4te.cache/: output.0  requests  traces.0  traces.1
snap/: snapcraft.yaml
